Fix overflow issue

--- a/_includes/style.scss
+++ b/_includes/style.scss
@@ -18,6 +18,7 @@ body {
 	background: $white;
   font: 18px/1.4 $helvetica;
   color: $darkGray;
+  overflow-wrap: break-word;
 }
 
 .container {
